--- a/src/components/Base/Base.css
+++ b/src/components/Base/Base.css
@@ -14,14 +14,16 @@
     position: relative;
     top: 20px;
     left: 15px;
+    width: calc(100% - 15px);
     color: #97A4BA;
     font-size: 14px;
 }
 
 .base-title-large {
-    position: relative;
+    position: absolute;
     top: 15px;
     left: 15px;
+    width: calc(100% - 15px);
     color: #67758D;
     font-size: 20px;
 }
