--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,14 +3,14 @@
     height: 100px;
 }
 
-.symbol {
+.card .symbol {
     position: absolute;
     top: 10px;
     right: 10px;
     width: 40px;
 }
 
-.data-content {
+.card .data-content {
     position: relative;
     top: 22px;
     left: 15px;
@@ -19,12 +19,12 @@
     /* background: black; */
 }
 
-.data {
+.card .data {
     color: #67758D;
     font-size: 28px;
 }
 
-.data-addition {
+.card .data-addition {
     border-style: solid;
     border-width: 1px;
     border-radius: 4px;
