--- a/src/components/PickDate/PickDate.css
+++ b/src/components/PickDate/PickDate.css
@@ -5,21 +5,21 @@
     flex-direction: row;
 }
 
-.prev {
+.pickdate .prev {
     height: 100%;
     width: 20%;
     cursor: pointer;
     outline: none;
 }
 
-.next {
+.pickdate .next {
     height: 100%;
     width: 20%;
     cursor: pointer;
     outline: none;
 }
 
-.inputdate {
+.pickdate .input {
     height: 100%;
     width: 100%;
     text-align: center;
@@ -29,11 +29,11 @@
     box-sizing: border-box;
 }
 
-.inputdate:focus {
+.pickdate .input:focus {
     outline: none;
 }
 
-.arrow {
+.pickdate .arrow {
     position: absolute;
     display: block;
     width: 10px;
@@ -42,16 +42,16 @@
     border-right: solid 1px #97A4BA;
 }
 
-.arrow.left {
-    top: 3px;
-    left: 0px;
+.pickdate .arrow.left {
+    top: 15px;
+    left: 9px;
     -webkit-transform: rotate(-135deg);
     transform: rotate(-135deg);
 }
 
-.arrow.right {
-    top: 3px;
-    left: -5px;
+.pickdate .arrow.right {
+    top: 15px;
+    left: 2px;
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
 }
