Set components on the grid layout

--- a/src/components/AllDayScheduleGraph/AllDayScheduleGraph.css
+++ b/src/components/AllDayScheduleGraph/AllDayScheduleGraph.css
@@ -1,4 +1,6 @@
-.allgraph {
-    height: 250px;
-    width: 700px;
+.seesea-alldaygraph {
+    height: 100%;
+    width: 100%;
+    /* height: 250px;
+    width: 700px; */
 }
