--- a/src/components/OneDayScheduleGraph/OneDayScheduleGraph.css
+++ b/src/components/OneDayScheduleGraph/OneDayScheduleGraph.css
@@ -1,4 +1,6 @@
-.graph {
-    height: 300px;
-    width: 400px;
+.seesea-onedaygraph {
+    height: 100%;
+    width: 100%;
+    /* height: 300px;
+    width: 400px; */
 }
