--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   background-color: #F6F9FC;
-  height: 100vh;
+  height: 100%;
   width: 100%;
+  min-height: 100vh;
   font-family: 'Noto Sans Japanese', sans-serif;
 }
