--- a/src/components/Camera/Camera.css
+++ b/src/components/Camera/Camera.css
@@ -1,9 +1,11 @@
-.camera {
-    height: 300px;
-    width: 400px;
+.seesea-camera {
+    height: 100%;
+    width: 100%;
+    /* height: 300px;
+    width: 400px; */
 }
 
-.camera .canvas {
+.seesea-camera .canvas {
     position: absolute;
     top: 60px;
     left: calc(3% + 35px);
