--- a/src/components/Camera/Camera.css
+++ b/src/components/Camera/Camera.css
@@ -1,13 +1,4 @@
-.seesea-camera {
+#seesea-camera {
     height: 100%;
     width: 100%;
-    /* height: 300px;
-    width: 400px; */
-}
-
-.seesea-camera .canvas {
-    position: absolute;
-    top: 60px;
-    left: calc(3% + 35px);
-    height: calc(100% - 70px);
 }
