--- a/src/components/PickDate/PickDate.css
+++ b/src/components/PickDate/PickDate.css
@@ -33,6 +33,12 @@
     outline: none;
 }
 
+@media (min-width: 320px) and (max-width: 767px) {
+    #seesea-pickdate .input {
+        font-size: 16px;
+    }
+}
+
 #seesea-pickdate .arrow {
     position: absolute;
     display: block;
