--- a/src/components/Base/Base.css
+++ b/src/components/Base/Base.css
@@ -6,6 +6,8 @@
     border-width: 1px;
     border-radius: 4px;
     box-shadow: 0 5px 10px -10px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 5px 10px -10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 5px 10px -10px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
 }
