--- a/src/components/PickDate/PickDate.css
+++ b/src/components/PickDate/PickDate.css
@@ -36,6 +36,7 @@
 @media (min-width: 320px) and (max-width: 767px) {
     #seesea-pickdate .input {
         font-size: 16px;
+        -webkit-appearance: none;
     }
 }
 
