--- a/src/components/OneDayScheduleGraph/OneDayScheduleGraph.css
+++ b/src/components/OneDayScheduleGraph/OneDayScheduleGraph.css
@@ -2,3 +2,9 @@
     height: 100%;
     width: 100%;
 }
+
+#seesea-onedaygraph .chart {
+    margin-top: 30px;
+    height: calc(100% - 30px);
+    widows: 100%;
+}
