--- a/src/Login.css
+++ b/src/Login.css
@@ -20,7 +20,8 @@
     bottom: 0;
     left: 0;
     height: 300px;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     margin: auto;
     background-color: white;
 }
