--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -5,6 +5,12 @@
     overflow: hidden;
 }
 
+#seesea-display:hover {
+    box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.2);
+}
+
 #seesea-display .image-content {
     height: 100%;
     width: 75%;
