--- a/src/components/AllDayScheduleGraph/AllDayScheduleGraph.css
+++ b/src/components/AllDayScheduleGraph/AllDayScheduleGraph.css
@@ -2,3 +2,9 @@
     height: 100%;
     width: 100%;
 }
+
+#seesea-alldaygraph .chart {
+    margin-top: 15px;
+    height: calc(100% - 12px);
+    width: 100%;
+}
