--- a/src/components/Camera/Camera.css
+++ b/src/components/Camera/Camera.css
@@ -2,3 +2,19 @@
     height: 100%;
     width: 100%;
 }
+
+#seesea-camera .activity {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    border-color: #E9E9E9;
+    color: white;
+    background-color: #F35C5C;
+    font-size: 15px;
+    text-size-adjust: auto;
+    margin-left: 5px;
+    padding: 2px 4px;
+}
